--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -7,14 +7,25 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
-    "build": "tsup"
+    "build": "tsup",
+    "test": "jest"
   },
   "devDependencies": {
+    "@swc/jest": "^0.2.28",
+    "@types/jest": "^29.5.3",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
+    "jest": "^29.6.2",
     "tsconfig": "*",
     "tsup": "^6.6.3",
     "typescript": "^4.5.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/generator": "^7.22.10",
+    "@babel/traverse": "^7.22.10",
+    "@swc/core": "^1.3.75",
+    "esbuild": "^0.19.0",
+    "module-from-string": "^3.3.0",
+    "swc-to-babel": "^2.2.0"
+  }
 }
