--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -1,9 +1,26 @@
 {
   "name": "@layer-cake/integration",
   "version": "0.0.0",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "module": "./dist/index.mjs.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./logger": {
+      "import": "./dist/logger.mjs.js",
+      "require": "./dist/logger.js",
+      "types": "./dist/logger.d.ts"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/*"
+      ]
+    }
+  },
+  "files": ["dist"],
   "license": "MIT",
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
@@ -24,6 +41,7 @@
     "@babel/generator": "^7.22.10",
     "@babel/traverse": "^7.22.10",
     "@swc/core": "^1.3.75",
+    "debug": "^4.3.4",
     "esbuild": "^0.19.0",
     "module-from-string": "^3.3.0",
     "swc-to-babel": "^2.2.0"
