--- a/packages/webpack-plugin/tsconfig.json
+++ b/packages/webpack-plugin/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@tsconfig/node16-strictest-esm/tsconfig.json",
   "include": ["."],
-  "exclude": ["dist", "build", "node_modules"]
+  "exclude": ["dist", "build", "node_modules"],
+  "compilerOptions": {
+    "noUnusedLocals": false
+  }
 }
