--- a/examples/webpack-react/package.json
+++ b/examples/webpack-react/package.json
@@ -25,6 +25,7 @@
     "mini-css-extract-plugin": "^2.7.3",
     "webpack": "^5.76.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "@layer-cake/webpack-plugin": "*"
   }
 }
