--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -20,7 +20,9 @@
       ]
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@swc/jest": "^0.2.28",
+    "@types/debug": "^4.1.8",
     "@types/jest": "^29.5.3",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
