[webpack-plugin] add loader-utils types

--- a/packages/webpack-plugin/package.json
+++ b/packages/webpack-plugin/package.json
@@ -35,6 +35,7 @@
     "loader-utils": "^2.0.0"
   },
   "devDependencies": {
+    "@types/loader-utils": "^2.0.4",
     "webpack": "^5.36.1"
   }
 }
