--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -44,6 +44,7 @@
     "@babel/generator": "^7.22.10",
     "@babel/traverse": "^7.22.10",
     "@swc/core": "^1.3.75",
+    "css.escape": "^1.5.1",
     "debug": "^4.3.4",
     "esbuild": "^0.19.0",
     "module-from-string": "^3.3.0",
