--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -4,28 +4,33 @@
   "main": "src/index.ts",
   "author": "Seb Toombs",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack"
+    "start:webpack": "webpack serve",
+    "build:webpack": "webpack",
+    "build:esbuild": "npx tsx build.ts"
   },
   "private": true,
   "dependencies": {
+    "@layer-cake/core": "*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@layer-cake/core": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@craftamap/esbuild-plugin-html": "^0.6.1",
+    "@layer-cake/esbuild-plugin": "*",
+    "@layer-cake/webpack-plugin": "*",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "esbuild": "^0.19.0",
+    "esm": "^3.2.25",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.3",
     "webpack": "^5.76.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "@layer-cake/webpack-plugin": "*"
+    "webpack-dev-server": "^4.11.1"
   }
 }
