--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,36 +1,30 @@
 {
-  "name": "layer-cake-example-webpack-react",
-  "version": "0.0.0",
-  "main": "src/index.ts",
-  "author": "Seb Toombs",
-  "scripts": {
-    "start:webpack": "webpack serve",
-    "build:webpack": "webpack",
-    "build:esbuild": "npx tsx build.ts"
-  },
+  "name": "example-react",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@layer-cake/core": "*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@layer-cake/core": "*"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@craftamap/esbuild-plugin-html": "^0.6.1",
-    "@layer-cake/esbuild-plugin": "*",
-    "@layer-cake/webpack-plugin": "*",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
-    "esbuild": "^0.19.0",
-    "esm": "^3.2.25",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.3",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "@layer-cake/vite-plugin": "file:../vite-plugin/dist"
   }
 }
