--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "devDependencies": {
     "eslint-config-custom": "*",
     "prettier": "latest",
+    "syncpack": "^12.3.0",
     "turbo": "latest"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "packageManager": "npm@8.19.2"
 }
