--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     },
-    "./logger": {
-      "import": "./dist/logger.mjs.js",
-      "require": "./dist/logger.js",
-      "types": "./dist/logger.d.ts"
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.mjs",
+      "require": "./dist/*.js"
     }
   },
   "typesVersions": {
@@ -25,29 +25,37 @@
   ],
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"**/*.ts*\"",
+    "lint": "eslint . --ext .ts",
     "build": "tsup",
     "test": "jest"
+  },
+  "peerDependencies": {
+    "@layer-cake/core": "*"
   },
   "devDependencies": {
     "@swc/jest": "^0.2.28",
     "@types/debug": "^4.1.8",
     "@types/jest": "^29.5.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.56.0",
     "eslint-config-custom": "*",
     "jest": "^29.6.2",
     "tsconfig": "*",
-    "tsup": "^6.6.3",
-    "typescript": "^4.5.2"
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3",
+    "@layer-cake/core": "*"
   },
   "dependencies": {
     "@babel/generator": "^7.22.10",
     "@babel/traverse": "^7.22.10",
     "@swc/core": "^1.3.75",
+    "chalk": "^5.3.0",
     "css.escape": "^1.5.1",
     "debug": "^4.3.4",
-    "esbuild": "^0.19.0",
+    "esbuild": "0.20.0",
+    "eval": "^0.1.8",
+    "mlly": "^1.5.0",
     "module-from-string": "^3.3.0",
-    "swc-to-babel": "^2.2.0"
+    "package-up": "^5.0.0",
+    "swc-to-babel": "3.0.1"
   }
 }
