--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@layer-cake/core",
+  "name": "@layer-cake/vite-plugin",
   "version": "0.0.0",
   "exports": {
     ".": {
@@ -25,20 +25,21 @@
   ],
   "license": "MIT",
   "scripts": {
-    "lint": "eslint . --ext .ts",
-    "build": "tsup"
+    "build": "tsup",
+    "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
-    "@types/hyphenate-style-name": "^1.0.0",
-    "@types/stylis": "^4.0.2",
     "eslint": "^8.56.0",
     "eslint-config-custom": "*",
     "tsconfig": "*",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^2.7.0"
   },
   "dependencies": {
-    "hyphenate-style-name": "^1.0.4",
-    "stylis": "^4.1.3"
+    "@layer-cake/integration": "*"
+  },
+  "peerDependencies": {
+    "vite": "^2.2.3 || ^3.0.0 || ^4.0.3 || ^5.0.0"
   }
 }
