--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,8 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
+      "outputs": ["dist/**"],
+      "env": ["NODE_ENV"]
     },
     "lint": {
       "outputs": []
