--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,19 +26,23 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "build": "tsup"
+    "build": "tsup",
+    "test": "jest"
   },
   "devDependencies": {
+    "@swc/jest": "^0.2.28",
     "@types/cssesc": "^3.0.2",
     "@types/hyphenate-style-name": "^1.0.0",
     "@types/stylis": "^4.0.2",
     "eslint": "^8.56.0",
     "eslint-config-custom": "*",
+    "jest": "^29.6.2",
     "tsconfig": "*",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "change-case": "^5.4.2",
     "cssesc": "^3.0.0",
     "hyphenate-style-name": "^1.0.4",
     "stylis": "^4.1.3"
