--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -33,6 +33,7 @@
     "@layer-cake/core": "*"
   },
   "devDependencies": {
+    "@layer-cake/core": "*",
     "@swc/jest": "^0.2.28",
     "@types/debug": "^4.1.8",
     "@types/jest": "^29.5.3",
@@ -41,8 +42,7 @@
     "jest": "^29.6.2",
     "tsconfig": "*",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3",
-    "@layer-cake/core": "*"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@babel/generator": "^7.22.10",
@@ -52,6 +52,7 @@
     "debug": "^4.3.4",
     "esbuild": "0.20.0",
     "eval": "^0.1.8",
+    "javascript-stringify": "^2.1.0",
     "mlly": "^1.5.0",
     "module-from-string": "^3.3.0",
     "package-up": "^5.0.0",
