Add core tests, dev script, atoms functionality, tidy up

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "lint": "eslint . --ext .ts",
     "build": "tsup",
+    "dev": "npm run build -- --watch",
     "test": "jest"
   },
   "devDependencies": {
