--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "build": "turbo run build --filter=!./examples/*",
-    "dev": "turbo run dev",
+    "dev": "turbo run dev --filter=!./examples/*",
+    "dev:vite": "turbo run dev --filter=./packages/vite-plugin --filter=./packages/*",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
