--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup",
+    "dev": "npm run build -- --watch",
     "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
